--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ select {
 
 div.fixed {
   position: fixed;
-  bottom: 10px;
+  bottom: 1em;
+  left: 0.5em;
 }
 
 div.fixedright {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 1.5em;
+  right: 1.5em;
   font-size: 0.6em;
 } 
 
